--- a/cafedeusblog.html
+++ b/cafedeusblog.html
@@ -33,17 +33,17 @@
             font-size: 16px;
             cursor: pointer;
         }
-        .container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-            flex-wrap: wrap;
-        }
         .intro {
             padding: 20px;
             font-size: 18px;
             color: #4a3b2a;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
         }
         .cafe-card {
             background: white;
@@ -52,6 +52,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 300px;
             text-align: center;
+            flex: 1 1 300px;
         }
         .cafe-card img {
             width: 100%;
@@ -103,6 +104,42 @@
             <img src="Cafe-negro.jpg" alt="Café Negro">
             <h3>Café Negro</h3>
             <p>Un café puro y fuerte, ideal para los amantes del sabor intenso.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="image_2025-04-11_091927972.jpg" alt="Espresso">
+            <h3>Espresso</h3>
+            <p>Un café concentrado, servido en porciones pequeñas pero potentes.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="cafe-macchiato.jpg" alt="Macchiato">
+            <h3>Macchiato</h3>
+            <p>Un espresso con un toque de leche espumada.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="como-preparar-un-cafe-moca.jpg" alt="Mocha">
+            <h3>Mocha</h3>
+            <p>Una deliciosa mezcla de café, chocolate y leche.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="images.jpg" alt="Ristretto">
+            <h3>Ristretto</h3>
+            <p>Una versión más concentrada del espresso, con sabor más intenso.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="cafe-americano-en-la-taza.jpg" alt="Americano">
+            <h3>Americano</h3>
+            <p>Espresso con agua caliente, más suave pero lleno de sabor.</p>
+            <button class="btn">Leer más</button>
+        </div>
+        <div class="cafe-card">
+            <img src="download.jpg" alt="Cold Brew">
+            <h3>Cold Brew</h3>
+            <p>Un café frío preparado lentamente para obtener un sabor suave.</p>
             <button class="btn">Leer más</button>
         </div>
     </div>
